# GRA-Multiverse-Optimizer

./: CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  GRA-Multiverse-Optimizer.rar  License.txt  README.md  pyproject.toml  requirements.txt
docs/en/: commercial.md  theory_multiverse_gra.md  usage_llm.md  usage_vpn.md
docs/ru/: commercial.md  theory_multiverse_gra.md  usage_llm.md  usage_vpn.md
notebooks/: llm_anti_hallucination_demo.ipynb
paper/: main.tex  references.bib
src/: Новый текстовый документ.txt
src/examples/: example_llm_en.ipynb  example_llm_ru.ipynb  example_vpn_ru_en.ipynb
src/gra_multiverse/: __init__.py  core.py  llm_module.py  optimizer.py  vpn_module.py
src/gra_multiverse/core/: __init__.py  functional.py  optimizer.py  state.py
src/gra_multiverse/llm_anti_hallucination/: __init__.py  ensemble.py  metrics.py  rag_consistency.py
tests/: test_core.py  test_llm_anti_hallucination.py  test_llm_module.py  test_optimizer.py
